# enterprise_copilot

./: .gitignore  README.md  convert_text_to_jsonl.py  example_csv_README.md  fine_tuning.py  fine_tuning_prompt.jsonl  fine_tuning_prompt_prepared.jsonl  hybrid_rag.py  print_db_content.py  pyproject.toml  query_rag.py  rag.py  requirements.txt  run_servers.py  server_script.py  test.py  test_db_connection.py  tile_csv_uploader.py  tile_data_README.md  urls.py
.devcontainer/: Dockerfile  docker_compose.yml
chroma_data/: chroma.sqlite3
django_project/: asgi.py  db.sqlite3  requirements.txt  settings.py  urls.py
django_project/chroma_data/: chroma.sqlite3
django_project/django_project/: settings.py  urls.py
django_project/predict_best_option/: .gitignore  apps.py  urls.py
postgres_data/: postgresql.conf  postmaster.opts  postmaster.pid
postgres_data/base/1/: 1249_vm  1259  1259_vm  14053_vm  2619_fsm  2664  2674  2678  2684  3081  3605
postgres_data/base/14224/: 14048  2608_vm  2609  2618  2662  2675  2838_vm  3080  3600_vm  3601_vm
postgres_data/base/14225/: 1255  1259  14052  14058  2579  2603_vm  2606  2610  2617_vm  2659  2836  2841  3455  3600  3603_vm  pg_internal.init
postgres_data/base/20672/: 1247  1249  1255  1255_fsm  1255_vm  1259  14058_vm  20673  20674  20678  20679  20681  20682  20685  20687  20689  20690  20693  20695  20699  20701  20703  20707  20709  20713  20715  20717  20721  20723  20727  20729  20736  20737  20738  20750  20751  20752  20753  20765  20766  (+87 more)
postgres_data/base/27814/: 1247  1247_vm  1249  1255  1259  1259_vm  14043_vm  14048_vm  2224  2579  2600  2601  2602  2603  2604  2605  2606  2607_vm  2608  2609  2610  2615_vm  2616  2616_vm  2617  2619  2619_fsm  2619_vm  2620  2650  2651  2652  2653  2654  2655  2656  2657  2658  2659  2660  (+96 more)
postgres_data/base/579951/: 1247  1249  1255  1259  1259_fsm  1259_vm  14047  14053  14057  2224  2579  2600  2600_vm  2601  2602  2602_vm  2603  2604  2605  2606  2608  2608_vm  2609  2610  2610_fsm  2615  2616  2617  2619  2619_fsm  2619_vm  2620  2650  2651  2652  2653  2654  2655  2656  2657  (+114 more)
postgres_data/base/589871/: 1247  1249  1255  1259  1259_vm  2224  2579  2600  2601  2602  2603  2604  2605  2605_vm  2606  2606_vm  2608  2609  2610  2616  2617  2619  2620  2650  2651  2652  2653  2654  2655  2656  2657  2658  2659  2660  2661  2662  2663  2664  2665  2666  (+86 more)
postgres_data/global/: 1213_vm  1214  1214_vm  1260  1261  1262  1262_vm  2396_vm  2671  2672  2964  2964_vm  2965  pg_control  pg_internal.init
postgres_data/pg_stat_tmp/: db_0.stat  db_14225.stat  db_20672.stat  db_27814.stat  db_579951.stat  db_589871.stat  global.stat
postgres_data/pg_xact/: 0000
postgres_tile_data/: postgresql.conf  postmaster.opts  postmaster.pid
postgres_tile_data/base/1/: 1247  1247_vm  14062  2601_vm  2606_vm  2618_fsm  2619_vm  2679  2691  2703  2704  2753_vm
postgres_tile_data/base/14224/: 1249  1255_vm  1259  2602_vm  2610_vm  2616_vm  2619  2658  2663  2667
postgres_tile_data/base/14225/: 2608  2618_vm  2665  2666  2673  2690  pg_internal.init
postgres_tile_data/base/16384/: 1247  1249  1249_vm  1255  1255_vm  1259  1259_vm  14043  16399  16400  16406  16407  16408  16409  16410  16417  16418  16420  2224  2579  2600_vm  2604  2605_vm  2606  2608  2609_vm  2610  2610_fsm  2610_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  (+18 more)
postgres_tile_data/global/: 1260_vm  1261_vm  1262  2396  2397  2671  2672  2676  pg_control  pg_internal.init
postgres_tile_data/pg_stat/: db_0.stat  db_14225.stat  db_16384.stat  global.stat
postgres_tile_data/pg_stat_tmp/: db_0.stat  db_14225.stat  db_16384.stat  global.stat
predict_best_option/: apps.py  hybrid_rag.py  routing.py  settings.py  transcription.py  urls.py  utils.py  views.py  web_search.py
predict_best_option/fastapi_app/: main.py  speech_service.py  transcription.py
predict_best_option/prompts/: insights_prompt.txt  summary_prompt.txt
predict_best_option/services/: email_service.py  insights_service.py  knowledge_service.py  rag_service.py
predict_best_option/templates/predict_best_option/: index.html
propensity_engine/: determine_client_stage_definitions.py  determine_data_type.py  general_engine.py
software_auction/: apps.py  llama_cpp_utils.py  scratch.py  urls.py  utils.py  views.py
software_auction/fastapi_app/: main.py  models.py  run.py  settings.py  start.sh  start_servers.sh
software_auction/fastapi_app/api/: chat.py  files.py  websearch.py
software_auction/fastapi_app/models/: search_types.py
software_auction/fastapi_app/rag/: database.py  hybrid_rag.py  rag_service.py  vector_store.py
software_auction/fastapi_app/routers/: rag_router.py  speech_router.py  tile_router.py  websearch_router.py
software_auction/fastapi_app/services/: analysis_service.py  analytics_service.py  chat_service.py  context_service.py  insights_service.py  knowledge_service.py  search_utils.py  settings.py  speech_service.py  transcription_service.py  tts_service.py  websearch_service.py
software_auction/fastapi_app/utils/: env_loader.py
software_auction/generated_code/analysis_20250120_064604/: analysis.py
software_auction/generated_code/analysis_20250120_081518/: analysis.py
software_auction/generated_code/analysis_20250120_082011/: analysis.py
software_auction/generated_code/analysis_20250120_082137/: analysis.py
software_auction/generated_code/analysis_20250120_082200/: analysis.py
software_auction/generated_code/analysis_20250120_082256/: analysis.py
software_auction/generated_code/analysis_20250120_082258/: analysis.py
software_auction/knowledge_base/: learned_1738623491.txt  learned_1738638734.txt  learned_1738638880.txt  learned_1738639996.txt  learned_1739073333.txt  questions.txt
software_auction/prompts/: email_prompt.txt
software_auction/services/: analysis_service.py  email_service.py
software_auction/templates/: base.html  index.html
staticfiles/css/: style.css
staticfiles/js/: chatbot.js  file_upload.js  main.js  search.js  speech_manager.js  tiles.js  voice.js
(+64 files in other folders)
